[package]
name = "jprq-client"
version = "0.1.0"
authors = ["Wackyator <pratapsinghtarun9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
openssl = { version = "0.10", features = ["vendored"] }
tokio-tungstenite ={ version =  "0.13" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.2.1" }
base64 = { version = "0.13.0" }
